Fix WebView markdown broken images and GUI overflow

--- a/app/src/main/assets/webview/markdown.css
+++ b/app/src/main/assets/webview/markdown.css
@@ -585,3 +585,9 @@ input[type="checkbox"] {
 .Box {
   border-radius: 6px;
 }
+
+.markdown-body img {
+  max-width: 100%;
+  box-sizing: content-box;
+  background-color: transparent;
+}
